add required jvm args