@@ -6,6 +6,14 @@ plugins {
 
 application {
   mainClass = "frontend.DarwinWorldApp"
+  applicationDefaultJvmArgs = listOf(
+    "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+    "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
+    "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
+    "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
+    "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+    "--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED"
+  )
 }
 
 group = "org.oolab"
